# httpie

./: Cargo.toml  README.md  prepare.sh
src/: main.rs
